--- a/style.css
+++ b/style.css
@@ -135,3 +135,9 @@ hr { border: none; border-top: 1px solid #eee; margin: 30px 0; }
         grid-template-columns: 1fr;
     }
 }
+/* Stile per centrare il sottotitolo del questionario */
+.centered-subtitle {
+    text-align: center;
+    color: #333;
+    font-size: 1.3em;
+}
